-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Networking & Observability
-
Fully Compatible
-
ALL
-
N&O 2025-08-18
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Data race condition
The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
/data/mci/ffeffd362c6208e1ea9ceccf265123f1/bazel_cache/f7b955f591b9066b5e52376f04a7cfd5/execroot/_main_/src/mongo/db/mirror_maestro.cpp:460: MISSING_LOCK 168127 Accessing "this->_executor" without holding lock "mongo::<unnamed>::MirrorMaestroImpl::InitializationGuard.mutex". Elsewhere, "mongo::<unnamed>::MirrorMaestroImpl._executor" is written to with "InitializationGuard.mutex" held 1 out of 1 times.