SERVER-108432 Only use MirrorMaestro executor after initialization (#39985)

GitOrigin-RevId: 721157f01466e5b4e557a0004aa75b7b0abc9320